--- a/index.html
+++ b/index.html
@@ -2,26 +2,75 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Meu Site</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Cachorros Famosos</title>
+  <style>
+    body {
+      font-family: 'Comic Sans MS', sans-serif;
+      background-color: #f0f8ff;
+      text-align: center;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #ff6f61;
+      padding: 1em;
+      color: white;
+      font-size: 2em;
+    }
+    main {
+      padding: 20px;
+    }
+    .dog-profile {
+      background-color: #fff;
+      border: 2px solid #ff6f61;
+      border-radius: 10px;
+      margin: 20px;
+      padding: 10px;
+      display: inline-block;
+      width: 250px;
+      text-align: center;
+    }
+    .dog-profile img {
+      width: 100%;
+      border-radius: 50%;
+    }
+    footer {
+      background-color: #333;
+      color: white;
+      padding: 1em;
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Bem-vindo ao Meu Site</h1>
-    <nav>
-      <a href="#">Início</a>
-      <a href="#">Sobre</a>
-      <a href="#">Contato</a>
-    </nav>
+    Bem-vindo ao site dos **Cachorros Famosos**!
   </header>
+  
   <main>
-    <section>
-      <h2>Sobre Mim</h2>
-      <p>Este é um parágrafo de exemplo.</p>
-    </section>
+    <h2>Os cachorros que dominam a internet!</h2>
+    <div class="dog-profile">
+      <img src="https://www.example.com/imagem-do-cao1.jpg" alt="Cão Famoso 1">
+      <h3>Rex, o Meme Vivente</h3>
+      <p>Rex ficou famoso por fazer uma cara de "não aguento mais" em todos os vídeos. Ele é um ícone da resistência.</p>
+    </div>
+    <div class="dog-profile">
+      <img src="https://www.example.com/imagem-do-cao2.jpg" alt="Cão Famoso 2">
+      <h3>Fido, o Sério</h3>
+      <p>Fido nunca sorri, nem em festas. Ele prova que até cachorros podem ter um rosto sério enquanto fazem coisas épicas.</p>
+    </div>
+    <div class="dog-profile">
+      <img src="https://www.example.com/imagem-do-cao3.jpg" alt="Cão Famoso 3">
+      <h3>Chico, o Chef</h3>
+      <p>Chico é famoso por seu canal no YouTube onde ensina receitas caninas. Sim, ele cozinha mais do que você!</p>
+    </div>
   </main>
+
   <footer>
-    <p>© 2025 Meu Site</p>
+    <p>© 2025 Cachorros Famosos. Todos os direitos reservados. Exceto para os ossos, que são para os cachorros.</p>
   </footer>
 </body>
 </html>
