--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <main>
     <h2>Os cachorros que dominam a internet!</h2>
     <div class="dog-profile">
-      <img src="https://www.example.com/imagem-do-cao1.jpg" alt="Cão Famoso 1">
+      <img src="https://www.google.com/imgres?q=imagem%20cachorro%20engra%C3%A7ado&imgurl=https%3A%2F%2Fwww.tiktok.com%2Fapi%2Fimg%2F%3FitemId%3D7436160671470914871%26location%3D0%26aid%3D1988&imgrefurl=https%3A%2F%2Fwww.tiktok.com%2F%40zueirarrando%2Fvideo%2F7436160671470914871&docid=n3-iy44qvTUPqM&tbnid=IFOmMqfG6bfJEM&vet=12ahUKEwjugdW0mrWNAxVfqpUCHd_DNu4QM3oECGoQAA..i&w=1080&h=1920&hcb=2&ved=2ahUKEwjugdW0mrWNAxVfqpUCHd_DNu4QM3oECGoQAA" alt="Cão Famoso 1">
       <h3>Rex, o Meme Vivente</h3>
       <p>Rex ficou famoso por fazer uma cara de "não aguento mais" em todos os vídeos. Ele é um ícone da resistência.</p>
     </div>
